[gd_scene load_steps=7 format=3 uid="uid://7axe4f61otd0"]

[ext_resource type="Texture2D" uid="uid://dktd5rk2m3vlu" path="res://hex_grid.png" id="1_rml4h"]
[ext_resource type="Script" path="res://Player.gd" id="2_l27aq"]
[ext_resource type="Script" path="res://ScoreDisplayerScrip.gd" id="3_f6ddo"]
[ext_resource type="FontVariation" uid="uid://bnkhbrbxw3n74" path="res://dy_font_variation.tres" id="4_ynm1g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l7klh"]
texture = ExtResource("1_rml4h")
texture_region_size = Vector2i(111, 95)
0:1/0 = 0
0:2/next_alternative_id = 3
0:2/0 = 0
0:2/1 = 1
0:2/1/modulate = Color(0, 1, 1, 1)
0:2/2 = 2
0:2/2/modulate = Color(0, 1, 0, 1)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_lb12g"]
tile_offset_axis = 1
tile_size = Vector2i(111, 95)
sources/0 = SubResource("TileSetAtlasSource_l7klh")

[node name="Main_2d" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lb12g")
navigation_visibility_mode = 1
format = 2
script = ExtResource("2_l27aq")

[node name="Timer" type="Timer" parent="TileMap"]
one_shot = true
autostart = true

[node name="Timer1s" type="Timer" parent="TileMap"]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(107, 209)
zoom = Vector2(0.2, 0.2)

[node name="ScoreDisplay" type="Node" parent="."]
script = ExtResource("3_f6ddo")

[node name="Control" type="Control" parent="ScoreDisplay"]
layout_mode = 3
anchors_preset = 0
offset_left = 36.0
offset_top = -133.0
offset_right = 36.0
offset_bottom = -133.0
scale = Vector2(2.5, 2.5)
pivot_offset = Vector2(200, 300)

[node name="name" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1045.2
offset_top = -240.8
offset_right = 1165.2
offset_bottom = -197.8
theme_override_fonts/font = ExtResource("4_ynm1g")
theme_override_font_sizes/font_size = 30
text = "用户名"

[node name="clock" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1046.8
offset_top = -154.0
offset_right = 1166.8
offset_bottom = -111.0
theme_override_fonts/font = ExtResource("4_ynm1g")
theme_override_font_sizes/font_size = 30
text = "你的颜色"

[node name="color" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1056.0
offset_top = 32.0
offset_right = 1176.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("4_ynm1g")
theme_override_font_sizes/font_size = 30
text = "剩余时间"

[node name="chanceremaining" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1056.8
offset_top = 230.0
offset_right = 1240.8
offset_bottom = 273.0
theme_override_fonts/font = ExtResource("4_ynm1g")
theme_override_font_sizes/font_size = 30
text = "剩余点击机会
"
metadata/_edit_group_ = true

[node name="color_value" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1050.0
offset_top = -64.8
offset_right = 1151.0
offset_bottom = -21.8
theme_override_fonts/font = ExtResource("4_ynm1g")
theme_override_font_sizes/font_size = 30
text = "Color"

[node name="time_value" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1058.8
offset_top = 124.0
offset_right = 1206.8
offset_bottom = 169.0
theme_override_font_sizes/font_size = 30
text = "Timevalue"

[node name="click_value" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1055.2
offset_top = 318.0
offset_right = 1143.2
offset_bottom = 363.0
theme_override_font_sizes/font_size = 30
text = "10"
metadata/_edit_group_ = true

[node name="p1_sc_text" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1049.2
offset_top = 400.4
offset_right = 1229.2
offset_bottom = 443.4
theme_override_fonts/font = ExtResource("4_ynm1g")
theme_override_font_sizes/font_size = 30
text = "蓝色玩家得分"

[node name="p1_sc_value" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1074.4
offset_top = 473.2
offset_right = 1147.4
offset_bottom = 518.2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="p2_sc_text" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1053.6
offset_top = 559.2
offset_right = 1233.6
offset_bottom = 602.2
theme_override_fonts/font = ExtResource("4_ynm1g")
theme_override_font_sizes/font_size = 30
text = "绿色玩家得分"

[node name="p2_sc_value" type="Label" parent="ScoreDisplay/Control"]
layout_mode = 0
offset_left = 1079.6
offset_top = 655.6
offset_right = 1144.6
offset_bottom = 700.6
theme_override_font_sizes/font_size = 30
text = "0
"

[node name="FileImportDialog" type="FileDialog" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="TileMap/Timer" to="TileMap" method="_on_timer_timeout"]
[connection signal="timeout" from="TileMap/Timer1s" to="TileMap" method="_on_timer_1s_timeout"]
[connection signal="file_selected" from="FileImportDialog" to="TileMap" method="_on_file_import_dialog_file_selected"]
